--- a/package.json
+++ b/package.json
@@ -1,33 +1,26 @@
 {
-  "name": "lxp-mvp-backend",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Node.js backend for the AI-Enabled LXP MVP",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js", // Requires nodemon: npm install -D nodemon
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "lxp",
-    "ai",
-    "learning",
-    "node",
-    "express",
-    "mongodb"
-  ],
-  "author": "Your Name / Team",
+    "dev": "nodemon server.js"
+ },
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3", // Or latest version
-    "express": "^4.18.2", // Or latest version
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^9.0.0", // Or latest version
-    "mongoose": "^7.0.0" // Or latest version compatible with your Node version
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20" // Optional, for development
+    "nodemon": "^3.0.1"
   }
 }
